controller_benchmark/k8s/status-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-benchmark-status-web
  namespace: mlops-energy
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
    - host: status.10.144.46.150.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controller-benchmark-status-web
                port:
                  number: 8088
